...
        TextPosition(offset: controller.text.length),
      );
      return null;
    }, [searchQuery, controller]);

    return Semantics(
      label: "Bike search",
      child: TextField(
        controller: controller,
        onChanged: (value) =>
            ref.read(bikeFilterProvider.notifier).setSearchQuery(value),
        style: textTheme.bodyMedium?.copyWith(color: colorScheme.onSecondary),
        decoration: InputDecoration(
...
